[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/Nodes/ValueSlider.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Dialogs/ImageEffects/ImageEffectParent.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Extensions/LineArt/Assets/Dialog/LineArtDialog.gd" type="Script" id=3]

[node name="LineArtDialog" instance=ExtResource( 2 )]
margin_right = 376.0
margin_bottom = 380.0
script = ExtResource( 3 )

[node name="VBoxContainer" parent="." index="3"]
margin_bottom = 344.0

[node name="AspectRatioContainer" parent="VBoxContainer" index="1"]
margin_bottom = 224.0

[node name="Preview" parent="VBoxContainer/AspectRatioContainer" index="0"]
margin_left = 80.0
margin_right = 280.0
margin_bottom = 200.0

[node name="OptionsContainer" parent="VBoxContainer" index="2"]
margin_top = 228.0
margin_bottom = 252.0

[node name="AffectOptionButton" parent="VBoxContainer/OptionsContainer" index="1"]
items = [ "Selected cels", null, false, 0, null, "Current frame", null, false, 1, null, "All frames", null, false, 2, null, "All projects", null, false, 3, null ]

[node name="Options" type="VBoxContainer" parent="VBoxContainer" index="3"]
margin_top = 256.0
margin_right = 360.0
margin_bottom = 336.0

[node name="Strength" parent="VBoxContainer/Options" index="0" instance=ExtResource( 1 )]
margin_right = 360.0
max_value = 1.0
step = 0.01
allow_greater = true
prefix = "Strength:"
suffix = "px"

[node name="LineColor" type="ColorPickerButton" parent="VBoxContainer/Options" index="1"]
margin_right = 12.0
margin_bottom = 20.0

[node name="AnimateDialog" parent="." index="4"]
margin_bottom = 344.0

[connection signal="value_changed" from="VBoxContainer/Options/Strength" to="." method="_on_Strength_value_changed"]
[connection signal="color_changed" from="VBoxContainer/Options/LineColor" to="." method="_on_LineColor_color_changed"]
